restassured tests cleanup