@@ -6,6 +6,9 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.startsWith;
 import static org.springframework.web.util.UriComponentsBuilder.fromHttpUrl;
+import static pl.symentis.shorturl.api.CreateAccountRequestBuilder.createAccountRequestBuilder;
+import static pl.symentis.shorturl.api.CreateShortcutRequestBuilder.*;
+import static pl.symentis.shorturl.integration.assertions.ExtendedAccountResponseAssert.assertThat;
 
 import java.net.URI;
 import java.net.URL;
@@ -24,7 +27,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.web.client.RestTemplate;
-import org.springframework.web.util.UriComponentsBuilder;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.wait.strategy.Wait;
 import org.testcontainers.junit.jupiter.Container;
@@ -34,10 +36,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jayway.restassured.RestAssured;
 import com.mongodb.MongoClient;
 
-import pl.symentis.shorturl.api.GetAccountResponse;
-import pl.symentis.shorturl.api.CreateAccountRequest;
-import pl.symentis.shorturl.api.CreateShortcutRequest;
-import pl.symentis.shorturl.api.RedirectsExpiryPolicyData;
+import pl.symentis.shorturl.api.*;
 import pl.symentis.shorturl.integration.assertions.ExtendedAccountResponseAssert;
 
 @ExtendWith(SpringExtension.class)
@@ -45,189 +44,248 @@ import pl.symentis.shorturl.integration.assertions.ExtendedAccountResponseAssert
 @SpringBootTest(webEnvironment = WebEnvironment.RANDOM_PORT)
 public class ShorturlApplicationIT {
 
-  private RestTemplate restTemplate = new RestTemplate();
+    private RestTemplate restTemplate = new RestTemplate();
 
-  @LocalServerPort
-  int port;
+    @LocalServerPort
+    int port;
 
-  @Autowired
-  ObjectMapper objectMapper;
+    @Autowired
+    ObjectMapper objectMapper;
 
-  @Container
-  public static GenericContainer<?> mongo = new GenericContainer<>("mongo:3.4-xenial")
-    .withExposedPorts(27017)
-    .waitingFor(Wait.forListeningPort());
+    @Container
+    public static GenericContainer<?> mongo = new GenericContainer<>("mongo:3.4-xenial")
+            .withExposedPorts(27017)
+            .waitingFor(Wait.forListeningPort());
 
-  @TestConfiguration
-  public static class MongoOverrides {
-    
-    @Bean
-    public MongoClient mongoClient() {
-      Integer mongoPort = mongo.getMappedPort(27017);
-      return new MongoClient("localhost", mongoPort);
+    @TestConfiguration
+    public static class MongoOverrides {
+
+        @Bean
+        public MongoClient mongoClient() {
+            Integer mongoPort = mongo.getMappedPort(27017);
+            return new MongoClient("localhost", mongoPort);
+        }
+
     }
-    
-  }
 
-  @BeforeEach
-  public void setUp() {
-    RestAssured.port = port;
-  }
+    @BeforeEach
+    public void setUp() {
+        RestAssured.port = port;
+    }
 
-  @Test
-  public void swagger_is_accessible() {
-    UriComponentsBuilder builder = fromHttpUrl("http://localhost").port(port).path("/v2/api-docs");
-    ResponseEntity<String> forEntity = restTemplate.getForEntity(builder.toUriString(), String.class);
-    assertThat(forEntity.getStatusCode()).as("swagger.json not found").isEqualTo(HttpStatus.OK);
-  }
+    @Test
+    public void swagger_is_accessible() {
+        String uriString = fromHttpUrl("http://localhost")
+            .port(port)
+            .path("/v2/api-docs")
+            .toUriString();
+        ResponseEntity<String> forEntity = restTemplate.getForEntity(uriString, String.class);
+        assertThat(forEntity.getStatusCode())
+            .as("swagger.json not found")
+            .isEqualTo(HttpStatus.OK);
+    }
 
-  @Test
-  public void swagger_ui_is_accessible() {
-    UriComponentsBuilder builder = fromHttpUrl("http://localhost").port(port).path("/swagger-ui.html");
-    ResponseEntity<String> forEntity = restTemplate.getForEntity(builder.toUriString(), String.class);
-    assertThat(forEntity.getStatusCode()).as("swagger-ui not found").isEqualTo(HttpStatus.OK);
+    @Test
+    public void swagger_ui_is_accessible() {
+        // given
+        String swaggerUiUrl = fromHttpUrl("http://localhost")
+            .port(port)
+            .path("/swagger-ui.html")
+            .toUriString();
 
-  }
+        // when
+        ResponseEntity<String> forEntity = restTemplate.getForEntity(swaggerUiUrl, String.class);
 
-  @Test
-  public void generate_shorturl() throws Exception {
+        // then
+        assertThat(forEntity.getStatusCode())
+            .as("swagger-ui not found")
+            .isEqualTo(HttpStatus.OK);
+    }
 
-    String accountId = generateRandomString();
+    @Test
+    public void generated_shorturl_is_accessible_and_redirect_to_() throws Exception {
 
-    given()
-      .contentType("application/json")
-      .body(new CreateAccountRequest(accountId, "account@account.com", "taxnumber", 1))
-      .when()
-      .post("/api/accounts/")
-      .then()
-      .statusCode(201);
+        String accountId = generateRandomString();
+        CreateAccountRequest createAccountRequest = createAccountRequestBuilder()
+            .withEmail("account@account.com")
+            .withMaxShortcuts(1)
+            .withName(accountId)
+            .withTaxnumber("taxnumber")
+            .build();
 
-    String location = given()
-        .contentType("application/json")
-        .body(new CreateShortcutRequest(new URL("http://onet.pl"), new RedirectsExpiryPolicyData(1)))
-        .pathParam("accountId", accountId)
+        given()
+            .contentType("application/json")
+            .body(createAccountRequest)
         .when()
-        .post("/api/accounts/{accountId}/shortcuts")
+            .post("/api/accounts/")
         .then()
-        .statusCode(201)
-        .header("Location", startsWith("http://localhost:" + port))
-        .extract()
-        .header("Location");
+            .statusCode(201);
 
-    given().
-      redirects()
-      .follow(false)
-      .when()
-      .get(new URL(location))
-      .then()
-      .statusCode(301)
-      .header("Location", equalTo("http://onet.pl"));
-  }
+        CreateShortcutRequest createShortcutRequest = createShortcutRequestBuilder()
+            .withUrl(new URL("http://onet.pl"))
+            .withExpiry(new RedirectsExpiryPolicyData(1))
+            .build();
 
-  @Test
-  public void create_shorturl() throws Exception {
-
-    String accountId = generateRandomString();
-    String shortcut = generateRandomString();
-
-    given()
-      .contentType("application/json")
-      .body(new CreateAccountRequest(accountId, "account@account.com", "taxnumber", 1))
-      .when()
-      .post("/api/accounts/")
-      .then()
-      .statusCode(201);
-
-    String location = given()
-        .contentType("application/json")
-        .body(new CreateShortcutRequest(new URL("http://onet.pl"), new RedirectsExpiryPolicyData(1)))
-        .pathParam("accountId", accountId)
-        .pathParam("shortcut", shortcut)
+        String location = given()
+            .contentType("application/json")
+            .body(createShortcutRequest)
+            .pathParam("accountId", accountId)
         .when()
-        .put("/api/accounts/{accountId}/shortcuts/{shortcut}")
+            .post("/api/accounts/{accountId}/shortcuts")
         .then()
-        .statusCode(201)
-        .header("Location", startsWith("http://localhost:" + port))
+            .statusCode(201)
+            .header("Location", startsWith("http://localhost:" + port))
         .extract()
-        .header("Location");
+            .header("Location");
 
-      given()
-        .redirects()
-        .follow(false)
+        given()
+            .redirects()
+                .follow(false)
         .when()
-        .get(new URL(location))
+            .get(new URL(location))
         .then()
-        .statusCode(301)
-        .header("Location", equalTo("http://onet.pl"));
-  }
+            .statusCode(301)
+            .header("Location", equalTo("http://onet.pl"));
+    }
 
-  @Test
-  public void dont_allow_to_create_two_shortcuts() throws Exception {
+    @Test
+    public void create_shorturl() throws Exception {
 
-    String accountId = generateRandomString();
-    String shortcut = generateRandomString();
+        String accountId = generateRandomString();
+        String shortcut = generateRandomString();
 
-    given()
-      .contentType("application/json")
-      .body(new CreateAccountRequest(accountId, "account@account.com", "taxnumber", 1))
-      .when()
-      .post("/api/accounts/")
-      .then()
-      .statusCode(201);
+        CreateAccountRequest createAccountRequest = createAccountRequestBuilder()
+            .withName(accountId)
+            .withTaxnumber("taxnumber")
+            .withMaxShortcuts(1)
+            .withEmail("account@account.com")
+            .build();
 
-    given()
-      .contentType("application/json")
-      .body(new CreateShortcutRequest(new URL("http://onet.pl"), new RedirectsExpiryPolicyData(1)))
-      .pathParam("accountId", accountId)
-      .pathParam("shortcut", shortcut)
-      .when()
-      .put("/api/accounts/{accountId}/shortcuts/{shortcut}")
-      .then()
-      .statusCode(201);
-
-    given()
-      .contentType("application/json")
-      .body(new CreateShortcutRequest(new URL("http://wp.pl"), new RedirectsExpiryPolicyData(1)))
-      .pathParam("accountId", accountId)
-      .pathParam("shortcut", shortcut)
-      .when()
-      .put("/api/accounts/{accountId}/shortcuts/{shortcut}")
-      .then()
-      .statusCode(409);
-  }
-
-  @Test
-  public void create_new_account() throws Exception {
-    String email = "account@account.com";
-    String name = "acc123";
-    CreateAccountRequest accountRequest = new CreateAccountRequest(name, email, "taxnumber", 1);
-    String location = given()
-        .contentType("application/json")
-        .body(accountRequest)
+        given()
+            .contentType("application/json")
+            .body(createAccountRequest)
         .when()
-        .post("/api/accounts")
+            .post("/api/accounts/")
         .then()
-        .statusCode(201)
-        .header("Location", equalTo("http://localhost:" + port + "/api/accounts/acc123"))
+            .statusCode(201);
+
+        CreateShortcutRequest createShortcutRequest = createShortcutRequestBuilder()
+            .withExpiry(new RedirectsExpiryPolicyData(1))
+            .withUrl(new URL("http://onet.pl"))
+            .build();
+
+        String location = given()
+            .contentType("application/json")
+            .body(createShortcutRequest)
+            .pathParam("accountId", accountId)
+            .pathParam("shortcut", shortcut)
+        .when()
+            .put("/api/accounts/{accountId}/shortcuts/{shortcut}")
+        .then()
+            .statusCode(201)
+            .header("Location", startsWith("http://localhost:" + port))
         .extract()
-        .header("Location");
+            .header("Location");
 
-    GetAccountResponse accountResponse = when().
-        get(URI.create(location))
-        .then().
-        statusCode(HttpStatus.OK.value())
+        given()
+            .redirects()
+            .follow(false)
+        .when()
+            .get(new URL(location))
+        .then()
+            .statusCode(301)
+            .header("Location", equalTo("http://onet.pl"));
+    }
+
+    @Test
+    public void dont_allow_to_create_two_shortcuts() throws Exception {
+
+        String accountId = generateRandomString();
+        String shortcut = generateRandomString();
+
+        CreateAccountRequest createAccountRequest = createAccountRequestBuilder()
+            .withName(accountId)
+            .withTaxnumber("taxnumber")
+            .withMaxShortcuts(1)
+            .withEmail("account@account.com")
+            .build();
+
+        given()
+            .contentType("application/json")
+            .body(createAccountRequest)
+        .when()
+            .post("/api/accounts/")
+        .then()
+            .statusCode(201);
+
+        CreateShortcutRequest createOnetShortcutRequest = createShortcutRequestBuilder()
+                .withExpiry(new RedirectsExpiryPolicyData(1))
+                .withUrl(new URL("http://onet.pl"))
+                .build();
+
+        given()
+            .contentType("application/json")
+            .body(createOnetShortcutRequest)
+            .pathParam("accountId", accountId)
+            .pathParam("shortcut", shortcut)
+        .when()
+            .put("/api/accounts/{accountId}/shortcuts/{shortcut}")
+        .then()
+            .statusCode(201);
+
+        CreateShortcutRequest createWpShortcutRequest = createShortcutRequestBuilder()
+                .withExpiry(new RedirectsExpiryPolicyData(1))
+                .withUrl(new URL("http://wp.pl"))
+                .build();
+
+        given()
+            .contentType("application/json")
+            .body(createWpShortcutRequest)
+            .pathParam("accountId", accountId)
+            .pathParam("shortcut", shortcut)
+        .when()
+            .put("/api/accounts/{accountId}/shortcuts/{shortcut}")
+        .then()
+            .statusCode(409);
+    }
+
+    @Test
+    public void create_new_account() throws Exception {
+        String email = "account@account.com";
+        String name = "acc123";
+
+        CreateAccountRequest createAccountRequest = createAccountRequestBuilder()
+                .withName(name)
+                .withTaxnumber("taxnumber")
+                .withMaxShortcuts(1)
+                .withEmail(email)
+                .build();
+        String location = given()
+            .contentType("application/json")
+            .body(createAccountRequest)
+        .when()
+            .post("/api/accounts")
+        .then()
+            .statusCode(201)
+            .header("Location", equalTo("http://localhost:" + port + "/api/accounts/acc123"))
         .extract()
-        .as(GetAccountResponse.class);
+            .header("Location");
 
-    ExtendedAccountResponseAssert
-      .assertThat(accountResponse)
-      .hasEmail(email)
-      .hasName(name)
-      .hasNoRegisteredShortcuts();
-  }
+        GetAccountResponse accountResponse = when()
+            .get(URI.create(location))
+        .then()
+            .statusCode(HttpStatus.OK.value())
+        .extract()
+            .as(GetAccountResponse.class);
 
-  private static String generateRandomString() {
-    return RandomStringUtils.randomAlphanumeric(5);
-  }
+        assertThat(accountResponse)
+            .hasEmail(email)
+            .hasName(name)
+            .hasNoRegisteredShortcuts();
+    }
+
+    private static String generateRandomString() {
+        return RandomStringUtils.randomAlphanumeric(5);
+    }
 
 }
